# file-system-module

./: .codecov.yml  .gitignore  .sonarcloud.properties  CMakeLists.txt  ChangeLog  FindFSMod.cmake  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  sonar-project.properties
.github/workflows/: build.yml
0.1/: .buildinfo  index.html  objects.inv  searchindex.js
0.1/.doctrees/: index.doctree
0.1/.doctrees/api_user/: classsimgrid_1_1module_1_1fs_1_1_file_system.doctree  classsimgrid_1_1module_1_1fs_1_1_file_system_exception.doctree  classsimgrid_1_1module_1_1fs_1_1_j_b_o_d_storage.doctree  classsimgrid_1_1module_1_1fs_1_1_storage.doctree
0.1/_sources/api_user/: classsimgrid_1_1module_1_1fs_1_1_file_system.rst.txt  classsimgrid_1_1module_1_1fs_1_1_j_b_o_d_storage.rst.txt  classsimgrid_1_1module_1_1fs_1_1_one_disk_storage.rst.txt  classsimgrid_1_1module_1_1fs_1_1_storage.rst.txt
0.1/api_user/: classsimgrid_1_1module_1_1fs_1_1_file_system_exception.html  classsimgrid_1_1module_1_1fs_1_1_storage.html
_sources/: index.rst.txt
_sources/api_user/: classdtlmod_1_1_d_t_l.rst.txt  classdtlmod_1_1_engine.rst.txt  classdtlmod_1_1_stream.rst.txt  classdtlmod_1_1_variable.rst.txt  classsimgrid_1_1fsmod_1_1_file.rst.txt  classsimgrid_1_1fsmod_1_1_file_stat.rst.txt  classsimgrid_1_1fsmod_1_1_file_system.rst.txt  classsimgrid_1_1fsmod_1_1_file_system_exception.rst.txt  classsimgrid_1_1fsmod_1_1_file_system_net_zone_impl_extension.rst.txt  classsimgrid_1_1fsmod_1_1_j_b_o_d_storage.rst.txt  classsimgrid_1_1fsmod_1_1_one_disk_storage.rst.txt  classsimgrid_1_1fsmod_1_1_one_remote_disk_storage.rst.txt  classsimgrid_1_1fsmod_1_1_partition.rst.txt  classsimgrid_1_1fsmod_1_1_storage.rst.txt  classsimgrid_1_1module_1_1fs_1_1_file.rst.txt  classsimgrid_1_1module_1_1fs_1_1_partition.rst.txt
api_user/: classdtlmod_1_1_d_t_l.html  classdtlmod_1_1_engine.html  classdtlmod_1_1_stream.html  classdtlmod_1_1_variable.html  classsimgrid_1_1fsmod_1_1_file.html  classsimgrid_1_1fsmod_1_1_file_stat.html  classsimgrid_1_1fsmod_1_1_file_system.html  classsimgrid_1_1fsmod_1_1_file_system_exception.html  classsimgrid_1_1fsmod_1_1_file_system_net_zone_impl_extension.html  classsimgrid_1_1fsmod_1_1_j_b_o_d_storage.html  classsimgrid_1_1fsmod_1_1_one_disk_storage.html  classsimgrid_1_1fsmod_1_1_one_remote_disk_storage.html  classsimgrid_1_1fsmod_1_1_partition.html  classsimgrid_1_1fsmod_1_1_storage.html  classsimgrid_1_1module_1_1fs_1_1_file.html  classsimgrid_1_1module_1_1fs_1_1_file_system.html  classsimgrid_1_1module_1_1fs_1_1_file_system_exception.html  classsimgrid_1_1module_1_1fs_1_1_j_b_o_d_storage.html  classsimgrid_1_1module_1_1fs_1_1_one_disk_storage.html  classsimgrid_1_1module_1_1fs_1_1_partition.html  classsimgrid_1_1module_1_1fs_1_1_storage.html
conf/cmake/: Documentation.cmake  FindSimGrid.cmake
conf/doxygen/: Doxyfile.in
doc/scripts/: generate_rst.py
doc/source/: api_user.rst  conf.py  getting_started.rst  index.rst  installation.rst
doc/source/_static/css/: custom.css
examples/: CMakeLists.txt  Examples.cmake  README.md  jbod.cpp  open_seek_write.cpp  open_seek_write_test.cpp  path_test.cpp
include/: File.hpp  FileMetadata.hpp  FileSystem.hpp  FileSystemException.h  JBODStorage.hpp  OneDiskStorage.h  OneDiskStorage.hpp  Partition.hpp  PathUtil.hpp  Storage.hpp  fsmod.hpp
include/fsmod/: CachingStrategy.hpp  File.hpp  FileMetadata.hpp  FileStat.hpp  FileSystem.hpp  FileSystemException.hpp  JBODStorage.hpp  OneDiskStorage.hpp  OneRemoteDiskStorage.hpp  Partition.hpp  PartitionFIFOCaching.hpp  PartitionLRUCaching.hpp  PathUtil.hpp  Storage.hpp  version.hpp.in
latest/: search.html
latest/.doctrees/: environment.pickle
latest/.doctrees/api_user/: classsimgrid_1_1module_1_1fs_1_1_file.doctree  classsimgrid_1_1module_1_1fs_1_1_one_disk_storage.doctree
latest/_sources/api_user/: classsimgrid_1_1module_1_1fs_1_1_file_system_exception.rst.txt
latest/api_user/: classsimgrid_1_1module_1_1fs_1_1_file.html  classsimgrid_1_1module_1_1fs_1_1_j_b_o_d_storage.html
src/: CachingStrategyFIFO.cpp  CachingStrategyLRU.cpp  CachingStrategyNone.cpp  File.cpp  FileMetadata.cpp  FileSystem.cpp  JBODStorage.cpp  OneDiskStorage.cpp  OneRemoteDiskStorage.cpp  Partition.cpp  PartitionFIFOCaching.cpp  PartitionLRUCaching.cpp  Path.cpp  PathUtil.cpp  Storage.cpp  fsmod_version.cpp
src/bindings/python/: fsmod_python.cpp
test/: caching_test.cpp  fifo_caching_test.cpp  file_system_test.cpp  jbod_storage_test.cpp  main.cpp  one_disk_storage_test.cpp  one_remote_disk_storage_test.cpp  path_util_test.cpp  register_test.cpp  seek_test.cpp  stat_test.cpp  test_util.hpp  truncate_test.cpp
test/python/: caching_test.py  file_system_test.py  jbod_storage_test.py  one_disk_storage_test.py  one_remote_disk_storage_test.py  path_util_test.py  register_test.py  seek_test.py  stat_test.py  truncate_test.py  unit_tests_python.py
